# elio

./: .gitattributes  .gitignore  AppStoreReviewNotes.md  CLAUDE.md  ExportOptions.plist  LICENSE  README.en.md  README.ja.md  README.md  RELEASE_NOTES.md  UnitTests.xctestplan  flank.yml
.github/workflows/: appstore.yml  mac-testflight.yml  metadata.yml  (+2 more)
AppStore/: CHECKLIST.md  Description_en.txt  Description_ja.txt  Keywords.txt  ReviewNotes.txt  SubscriptionInfo.txt  Subtitle.txt  WhatsNew.txt  privacy.html  terms.html
CAgentLib/: CAgentLib-Bridging-Header.h  CMakeLists.txt
CAgentLib/include/: agent_context.h  agent_json.h  agent_lib.h  agent_mcp.h  agent_orchestrator.h  agent_parser.h  agent_string.h  agent_types.h
CAgentLib/src/: agent_context.c  agent_json.c  agent_lib.c  agent_mcp.c  agent_orchestrator.c  agent_parser.c  agent_string.c
CAgentLib/swift/: CAgentLibWrapper.swift
CAgentLib/tests/: test_json.c  test_orchestrator.c  test_parser.c  test_string.c
ElioChat.xcodeproj/: project.pbxproj
ElioWidget/: ElioWidget.swift  ElioWidgetBundle.swift  Info.plist  SharedDataManager.swift
LocalAIAgent/: LocalAIAgent-Bridging-Header.h  LocalAIAgent.entitlements
LocalAIAgent.xcodeproj/: project.pbxproj
LocalAIAgentTests/: AnonymousMessagingTests.swift  BackendTests.swift  ChatModeManagerTests.swift  ChatModeTests.swift  DeviceIdentityTests.swift  FriendsManagerTests.swift  InferenceServerConfigTests.swift  LocalAIAgentTests.swift  MessagingManagerTests.swift  ModelLoaderTests.swift  P2PBackendTests.swift  PrivateServerManagerTests.swift  SyncManagerTests.swift  TokenManagerTests.swift  ToolParserTests.swift
LocalAIAgentUITests/: LLMConversationTests.swift  LocalAIAgentUITests.swift  SnapshotHelper.swift  SnapshotTests.swift
Training/: README.md  merge_and_convert.py  requirements.txt  train_lora.py  training_data.json
ci_scripts/: ci_post_clone.sh  ci_post_xcodebuild.sh  ci_pre_xcodebuild.sh
fastlane/: Appfile  Fastfile  Gymfile  Matchfile  README.md  Snapfile  add_captions.sh  report.xml
scripts/: add_localizations.rb  create_localizations.py  elio_screenshots.sh  generate-localizations.sh  install-certificates.sh  pre-submission-check.sh  verify-mcp.sh
tasks/: lessons.md  todo.md
(+317 files in other folders)
